<?xml version="1.0"?>
<package>
  <name>occupancy_map_generator</name>
  <version>0.0.0</version>
  <description>A simple occupancy_map_generator package</description>

  <author email="john.lewis@tecnico.ulisboa.pt">Erik Nelson</author>
  <maintainer email="john.lewis@tecnico.ulisboa.pt">Erik Nelson</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>core_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <!--build_depend>utils</build_depend-->


  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>core_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <!--run_depend>utils</run_depend-->


  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
</package>
